Archive previous tagged version of webtier.
Former-commit-id: 4fb9c00f40fb06666534189d07298349557aa40d

--- a/webtier/toc/toc_body.html
+++ b/webtier/toc/toc_body.html
@@ -62,6 +62,8 @@
             <li><a href="other/#cmpmsg">CMPMSG</a></li>
             <li><a href="other/#stndrd">STNDRD STDMSG</a></li>
             <li><a href="other/#cobfl">COBFL CRBMG CWBMG CCBFL</a></li>
+            <li><a href="other/#setblock">SETBLOCK</a></li>
+            <li><a href="other/#setbmiss">SETBMISS GETBMISS</a></li>
          </ul>
       <p />
       <li>Example Programs:</li>
@@ -70,11 +72,6 @@
             <li><a href="writeraob/">Encoding rawinsonde BUFR messages</a></li>
             <li><a href="prepbufr/">Decoding NCEP PREPBUFR files</a></li>
             <li><a href="debufr/">General-purpose utility for decoding BUFR messages</a></li>
-         </ul>
-      <p />
-      <li>Other Related Topics:</li>
-         <ul>
-            <li><a href="cwordsh/">The NCEP cwordsh utility</a></li>
          </ul>
       <p />
    </ul>
