Archive previous tagged version of webtier.
Former-commit-id: 6db61337562534dc6caecceec0106d34d6d5b685

--- a/webtier/bufrlib_body.html
+++ b/webtier/bufrlib_body.html
@@ -13,7 +13,7 @@ rather, for that there are several good alternative resources available such as 
 <a href="http://www.nws.noaa.gov/cgi-bin/nwsexit.pl?url=http://www.wmo.int/pages/prog/www/WMOCodes/Guides/BUFRCREXPreface_en.html">
 Guide to WMO Table-Driven Code Forms</a>, which provides a good,
 basic layman's introduction, or even the
-<a href="http://www.nws.noaa.gov/cgi-bin/nwsexit.pl?url=ftp://ftp.wmo.int/Documents/MediaPublic/Publications/CodesManual_WMO_No_306/WMO306_Vol_I.2_2012_en.pdf">WMO Manual #306</a>
+<a href="http://www.nws.noaa.gov/cgi-bin/nwsexit.pl?url=http://www.wmo.int/pages/prog/www/WMOCodes/WMO306_vI2/VolumeI.2.html">WMO Manual #306</a>
 itself, which, although it is more of a technical document and thus contains all of
 the minute details and regulations, is nevertheless the &quot;official&quot; documentation
 of the BUFR code form.  Therefore, throughout this document set, we will assume
@@ -32,7 +32,7 @@ After downloading and unpacking this tarfile (via &quot;tar xvf&quot;),
 read and follow the instructions in the extracted file
 &quot;README_BUFRLIB&quot; in order to compile the software:
 </p>
-<h3 align="center"><a href="BUFRLIB_v10-2-3.tar">Download NCEP BUFRLIB Software</a></h3>
+<h3 align="center"><a href="BUFRLIB_v11-0-0.tar">Download NCEP BUFRLIB Software</a></h3>
    <p>
 If you are a current user of our software, you can also view our change history logs:<br>
    <p>
@@ -40,6 +40,10 @@ If you are a current user of our software, you can also view our change history 
     <TR ALIGN=CENTER>
       <TH>Date</TH>
       <TH>Summary of Changes</TH>
+    </TR>
+    <TR ALIGN=CENTER>
+      <TD>4/27/2015</TD>
+      <TD ALIGN=CENTER><A HREF="versions/#v11.0.0">Version 11.0.0</A></TD>
     </TR>
     <TR ALIGN=CENTER>
       <TD>6/21/2013</TD>
