--- a/webtier/toc/toc_body.html
+++ b/webtier/toc/toc_body.html
@@ -54,7 +54,11 @@
             <li><a href="other/#pkvs01">PKVS01 PKBS1</a></li>
             <li><a href="other/#iupbs3">IUPBS3</a></li>
             <li><a href="other/#upds3">UPDS3</a></li>
+            <li><a href="other/#nemdefs">NEMDEFS</a></li>
+            <li><a href="other/#nemspecs">NEMSPECS</a></li>
             <li><a href="other/#getlens">GETLENS</a></li>
+            <li><a href="other/#gettagpr">GETTAGPR</a></li>
+            <li><a href="other/#getvalnb">GETVALNB</a></li>
             <li><a href="other/#cnved4">CNVED4</a></li>
             <li><a href="other/#maxout">MAXOUT</a></li>
             <li><a href="other/#bvers">BVERS</a></li>
@@ -64,6 +68,7 @@
             <li><a href="other/#cobfl">COBFL CRBMG CWBMG CCBFL</a></li>
             <li><a href="other/#setblock">SETBLOCK</a></li>
             <li><a href="other/#setbmiss">SETBMISS GETBMISS</a></li>
+            <li><a href="other/#isetprm">ISETPRM IGETPRM EXITBUFR</a></li>
          </ul>
       <p />
       <li>Example Programs:</li>
