--- a/tables_project/outfiles/TableA_0_STDv13_LOC7.html
+++ b/tables_project/outfiles/TableA_0_STDv13_LOC7.html
@@ -10,9 +10,9 @@
   <h2>BASED ON BUFR MASTER TABLE 0 (WMO), VERSION 13 IMPLEMENTED ON November 07, 2007  </h2>
   <br />
   <h3>LINKS TO OTHER VERSION 13 TABLES:&nbsp;&nbsp;<a href="TableB_0_STDv13_LOC7.html">B</a>&nbsp;&nbsp;<a href="TableD_0_STDv13_LOC7.html">D</a>&nbsp;&nbsp;<a href="CodeFlag_0_STDv13_LOC7.html">CODE/FLAG</a></h3>
-  <h3>LINKS TO OTHER TABLE A VERSIONS:&nbsp;13&nbsp;<a href="TableA_0_STDv14_LOC7.html">14</a>&nbsp;<a href="TableA_0_STDv15_LOC7.html">15</a>&nbsp;<a href="TableA_0_STDv16_LOC7.html">16</a>&nbsp;<a href="TableA_0_STDv17_LOC7.html">17</a>&nbsp;<a href="TableA_0_STDv18_LOC7.html">18</a>&nbsp;<a href="TableA_0_STDv19_LOC7.html">19</a>&nbsp;<a href="TableA_0_STDv20_LOC7.html">20</a>&nbsp;<a href="TableA_0_STDv21_LOC7.html">21</a>&nbsp;<a href="TableA_0_STDv22_LOC7.html">22</a>&nbsp;<a href="TableA_0_STDv23_LOC7.html">23</a>&nbsp;<a href="TableA_0_STDv24_LOC7.html">24</a>&nbsp;<a href="TableA_0_STDv25_LOC7.html">25</a>&nbsp;<a href="TableA_0_STDv26_LOC7.html">26</a>&nbsp;<a href="TableA_0_STDv27_LOC7.html">27</a>&nbsp;<a href="TableA_0_STDv28_LOC7.html">28</a>&nbsp;<a href="TableA_0_STDv29_LOC7.html">29</a></h3>
+  <h3>LINKS TO OTHER TABLE A VERSIONS:&nbsp;13&nbsp;<a href="TableA_0_STDv14_LOC7.html">14</a>&nbsp;<a href="TableA_0_STDv15_LOC7.html">15</a>&nbsp;<a href="TableA_0_STDv16_LOC7.html">16</a>&nbsp;<a href="TableA_0_STDv17_LOC7.html">17</a>&nbsp;<a href="TableA_0_STDv18_LOC7.html">18</a>&nbsp;<a href="TableA_0_STDv19_LOC7.html">19</a>&nbsp;<a href="TableA_0_STDv20_LOC7.html">20</a>&nbsp;<a href="TableA_0_STDv21_LOC7.html">21</a>&nbsp;<a href="TableA_0_STDv22_LOC7.html">22</a>&nbsp;<a href="TableA_0_STDv23_LOC7.html">23</a>&nbsp;<a href="TableA_0_STDv24_LOC7.html">24</a>&nbsp;<a href="TableA_0_STDv25_LOC7.html">25</a>&nbsp;<a href="TableA_0_STDv26_LOC7.html">26</a>&nbsp;<a href="TableA_0_STDv27_LOC7.html">27</a>&nbsp;<a href="TableA_0_STDv28_LOC7.html">28</a>&nbsp;<a href="TableA_0_STDv29_LOC7.html">29</a>&nbsp;<a href="TableA_0_STDv30_LOC7.html">30</a></h3>
 <br />
-  <h5>(This webpage was generated: 2017/12/04 16:10:33)</h5>
+  <h5>(This webpage was generated: 2018/07/13 15:16:29)</h5>
   <br />
   <hr />
 <p class="indent">
@@ -1001,7 +1001,7 @@ All local types and subtypes are shown in italics below.</p><br />
         <td class="local">GOES high-density winds - visible (BUFR)</td>
         </tr>
         <tr>
-        <td class="local center">12</td>
+        <td class="local center">13</td>
         <td class="local">GOES high-density winds - picture triplet (BUFR)</td>
         </tr>
         <tr>
@@ -1045,6 +1045,18 @@ All local types and subtypes are shown in italics below.</p><br />
         <td class="local">India low-density winds - water vapor imager (SATOB)</td>
         </tr>
         <tr>
+        <td class="local center">24</td>
+        <td class="local">India high-density winds - infrared (long-wave) (BUFR)</td>
+        </tr>
+        <tr>
+        <td class="local center">25</td>
+        <td class="local">India high-density winds - visible (BUFR)</td>
+        </tr>
+        <tr>
+        <td class="local center">26</td>
+        <td class="local">India high-density winds - water vapor imager (BUFR)</td>
+        </tr>
+        <tr>
         <td class="local center">41</td>
         <td class="local">Japan low-density winds - infrared (long-wave) (SATOB)</td>
         </tr>
@@ -1055,6 +1067,18 @@ All local types and subtypes are shown in italics below.</p><br />
         <tr>
         <td class="local center">43</td>
         <td class="local">Japan low-density winds - water vapor imager (SATOB)</td>
+        </tr>
+        <tr>
+        <td class="local center">44</td>
+        <td class="local">Japan high-density winds - infrared (long-wave) (BUFR)</td>
+        </tr>
+        <tr>
+        <td class="local center">45</td>
+        <td class="local">Japan high-density winds - visible (BUFR)</td>
+        </tr>
+        <tr>
+        <td class="local center">46</td>
+        <td class="local">Japan high-density winds - water vapor imager (BUFR)</td>
         </tr>
         <tr>
         <td class="local center">50</td>
@@ -4057,6 +4081,10 @@ All local types and subtypes are shown in italics below.</p><br />
         <tr>
         <td class="local center">32</td>
         <td class="local">Urbanet - University of South Alabama (MADIS)</td>
+        </tr>
+        <tr>
+        <td class="local center">33</td>
+        <td class="local">HF-METAR - one-minute ASOS</td>
         </tr>
         <tr>
         <td class="local center">101</td>
