--- a/tables_project/outfiles/TableB_0_STDv24_LOC7.html
+++ b/tables_project/outfiles/TableB_0_STDv24_LOC7.html
@@ -10,9 +10,9 @@
   <h2>BASED ON BUFR MASTER TABLE 0 (WMO), VERSION 24 IMPLEMENTED ON May 06, 2015  </h2>
   <br />
   <h3>LINKS TO OTHER VERSION 24 TABLES:&nbsp;&nbsp;<a href="TableA_0_STDv24_LOC7.html">A</a>&nbsp;&nbsp;<a href="TableD_0_STDv24_LOC7.html">D</a>&nbsp;&nbsp;<a href="CodeFlag_0_STDv24_LOC7.html">CODE/FLAG</a></h3>
-  <h3>LINKS TO OTHER TABLE B VERSIONS:&nbsp;<a href="TableB_0_STDv13_LOC7.html">13</a>&nbsp;<a href="TableB_0_STDv14_LOC7.html">14</a>&nbsp;<a href="TableB_0_STDv15_LOC7.html">15</a>&nbsp;<a href="TableB_0_STDv16_LOC7.html">16</a>&nbsp;<a href="TableB_0_STDv17_LOC7.html">17</a>&nbsp;<a href="TableB_0_STDv18_LOC7.html">18</a>&nbsp;<a href="TableB_0_STDv19_LOC7.html">19</a>&nbsp;<a href="TableB_0_STDv20_LOC7.html">20</a>&nbsp;<a href="TableB_0_STDv21_LOC7.html">21</a>&nbsp;<a href="TableB_0_STDv22_LOC7.html">22</a>&nbsp;<a href="TableB_0_STDv23_LOC7.html">23</a>&nbsp;24&nbsp;<a href="TableB_0_STDv25_LOC7.html">25</a>&nbsp;<a href="TableB_0_STDv26_LOC7.html">26</a>&nbsp;<a href="TableB_0_STDv27_LOC7.html">27</a>&nbsp;<a href="TableB_0_STDv28_LOC7.html">28</a>&nbsp;<a href="TableB_0_STDv29_LOC7.html">29</a></h3>
+  <h3>LINKS TO OTHER TABLE B VERSIONS:&nbsp;<a href="TableB_0_STDv13_LOC7.html">13</a>&nbsp;<a href="TableB_0_STDv14_LOC7.html">14</a>&nbsp;<a href="TableB_0_STDv15_LOC7.html">15</a>&nbsp;<a href="TableB_0_STDv16_LOC7.html">16</a>&nbsp;<a href="TableB_0_STDv17_LOC7.html">17</a>&nbsp;<a href="TableB_0_STDv18_LOC7.html">18</a>&nbsp;<a href="TableB_0_STDv19_LOC7.html">19</a>&nbsp;<a href="TableB_0_STDv20_LOC7.html">20</a>&nbsp;<a href="TableB_0_STDv21_LOC7.html">21</a>&nbsp;<a href="TableB_0_STDv22_LOC7.html">22</a>&nbsp;<a href="TableB_0_STDv23_LOC7.html">23</a>&nbsp;24&nbsp;<a href="TableB_0_STDv25_LOC7.html">25</a>&nbsp;<a href="TableB_0_STDv26_LOC7.html">26</a>&nbsp;<a href="TableB_0_STDv27_LOC7.html">27</a>&nbsp;<a href="TableB_0_STDv28_LOC7.html">28</a>&nbsp;<a href="TableB_0_STDv29_LOC7.html">29</a>&nbsp;<a href="TableB_0_STDv30_LOC7.html">30</a></h3>
 <br />
-  <h5>(This webpage was generated: 2017/12/04 16:02:33)</h5>
+  <h5>(This webpage was generated: 2018/07/13 15:16:45)</h5>
   <br />
   <hr />
 <h3>Classification of elements</h3>
@@ -17873,6 +17873,15 @@ CLASS 33 - Quality information</h3>
     <td>TOQF</td>
   </tr>
   <tr class="local">
+    <td>0-33-237</td>
+    <td>FSL "QC applied" flag for surface sensor status</td>
+    <td><a href="CodeFlag_0_STDv24_LOC7.html#033237">Code table</a></td>
+    <td class="right">0</td>
+    <td class="right">0</td>
+    <td class="right">5</td>
+    <td>QCSS</td>
+  </tr>
+  <tr class="local">
     <td>0-33-238</td>
     <td>Data quality check indicator</td>
     <td><a href="CodeFlag_0_STDv24_LOC7.html#033238">Code table</a></td>
@@ -19157,6 +19166,33 @@ CLASS 55 - Report type</h3>
     <td class="right">0</td>
     <td class="right">14</td>
     <td>TSB</td>
+  </tr>
+  <tr class="local">
+    <td>0-55-020</td>
+    <td>Table A data type</td>
+    <td><a href="CodeFlag_0_STDv24_LOC7.html#055020">Code table</a></td>
+    <td class="right">0</td>
+    <td class="right">0</td>
+    <td class="right">8</td>
+    <td>TABLAT</td>
+  </tr>
+  <tr class="local">
+    <td>0-55-021</td>
+    <td>Table A data subtype (WMO standard)</td>
+    <td><a href="CodeFlag_0_STDv24_LOC7.html#055021">Code table</a></td>
+    <td class="right">0</td>
+    <td class="right">0</td>
+    <td class="right">8</td>
+    <td>TABLASS</td>
+  </tr>
+  <tr class="local">
+    <td>0-55-022</td>
+    <td>Table A data subtype (NCEP local)</td>
+    <td><a href="CodeFlag_0_STDv24_LOC7.html#055022">Code table</a></td>
+    <td class="right">0</td>
+    <td class="right">0</td>
+    <td class="right">8</td>
+    <td>TABLASL</td>
   </tr>
  </tbody>
 </table>
