--- a/tables_project/outfiles/TableD_0_STDv17_LOC7.html
+++ b/tables_project/outfiles/TableD_0_STDv17_LOC7.html
@@ -10,9 +10,9 @@
   <h2>BASED ON BUFR MASTER TABLE 0 (WMO), VERSION 17 IMPLEMENTED ON November 02, 2011  </h2>
   <br />
   <h3>LINKS TO OTHER VERSION 17 TABLES:&nbsp;&nbsp;<a href="TableA_0_STDv17_LOC7.html">A</a>&nbsp;&nbsp;<a href="TableB_0_STDv17_LOC7.html">B</a>&nbsp;&nbsp;<a href="CodeFlag_0_STDv17_LOC7.html">CODE/FLAG</a></h3>
-  <h3>LINKS TO OTHER TABLE D VERSIONS:&nbsp;<a href="TableD_0_STDv13_LOC7.html">13</a>&nbsp;<a href="TableD_0_STDv14_LOC7.html">14</a>&nbsp;<a href="TableD_0_STDv15_LOC7.html">15</a>&nbsp;<a href="TableD_0_STDv16_LOC7.html">16</a>&nbsp;17&nbsp;<a href="TableD_0_STDv18_LOC7.html">18</a>&nbsp;<a href="TableD_0_STDv19_LOC7.html">19</a>&nbsp;<a href="TableD_0_STDv20_LOC7.html">20</a>&nbsp;<a href="TableD_0_STDv21_LOC7.html">21</a>&nbsp;<a href="TableD_0_STDv22_LOC7.html">22</a>&nbsp;<a href="TableD_0_STDv23_LOC7.html">23</a>&nbsp;<a href="TableD_0_STDv24_LOC7.html">24</a>&nbsp;<a href="TableD_0_STDv25_LOC7.html">25</a>&nbsp;<a href="TableD_0_STDv26_LOC7.html">26</a>&nbsp;<a href="TableD_0_STDv27_LOC7.html">27</a>&nbsp;<a href="TableD_0_STDv28_LOC7.html">28</a>&nbsp;<a href="TableD_0_STDv29_LOC7.html">29</a></h3>
+  <h3>LINKS TO OTHER TABLE D VERSIONS:&nbsp;<a href="TableD_0_STDv13_LOC7.html">13</a>&nbsp;<a href="TableD_0_STDv14_LOC7.html">14</a>&nbsp;<a href="TableD_0_STDv15_LOC7.html">15</a>&nbsp;<a href="TableD_0_STDv16_LOC7.html">16</a>&nbsp;17&nbsp;<a href="TableD_0_STDv18_LOC7.html">18</a>&nbsp;<a href="TableD_0_STDv19_LOC7.html">19</a>&nbsp;<a href="TableD_0_STDv20_LOC7.html">20</a>&nbsp;<a href="TableD_0_STDv21_LOC7.html">21</a>&nbsp;<a href="TableD_0_STDv22_LOC7.html">22</a>&nbsp;<a href="TableD_0_STDv23_LOC7.html">23</a>&nbsp;<a href="TableD_0_STDv24_LOC7.html">24</a>&nbsp;<a href="TableD_0_STDv25_LOC7.html">25</a>&nbsp;<a href="TableD_0_STDv26_LOC7.html">26</a>&nbsp;<a href="TableD_0_STDv27_LOC7.html">27</a>&nbsp;<a href="TableD_0_STDv28_LOC7.html">28</a>&nbsp;<a href="TableD_0_STDv29_LOC7.html">29</a>&nbsp;<a href="TableD_0_STDv30_LOC7.html">30</a></h3>
 <br />
-  <h5>(This webpage was generated: 2017/12/04 16:05:11)</h5>
+  <h5>(This webpage was generated: 2018/07/13 15:16:57)</h5>
   <br />
   <hr />
 <h3>Categories of common sequences</h3>
@@ -31752,8 +31752,7 @@
   <tr class="local">
     <th>3-49-032</th>
     <th style="width:150">FN005040</th>
-    <th style="width:750; padding-left:25px;" class="left">(Processed Meteosat Second Generation (MSG) Spinning Enhanced Visible and Infrared Imager (SEVIRI) Clear Sky Radiance (CSR) da
-ta)</th>
+    <th style="width:750; padding-left:25px;" class="left">(Processed Meteosat Second Generation (MSG) Spinning Enhanced Visible and Infrared Imager (SEVIRI) Clear Sky Radiance (CSR) data)</th>
   </tr>
  </thead>
  <tbody>
@@ -31850,6 +31849,18 @@ ta)</th>
     <th>3-49-195</th>
     <th style="width:150">FN005000</th>
     <th style="width:750; padding-left:25px;" class="left">(Japanese satellite-derived wind reports)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-49-196</th>
+    <th style="width:150">NC005000</th>
+    <th style="width:750; padding-left:25px;" class="left">(India satellite-derived wind reports)</th>
   </tr>
  </thead>
  <tbody>
@@ -32638,6 +32649,282 @@ ter reports)</th>
     <th>3-50-153</th>
     <th style="width:150">MNSORFSQ</th>
     <th style="width:750; padding-left:25px;" class="left">(Mesonet solar radiation flux sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-157</th>
+    <th style="width:150">HMSKYCSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR sky cover sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-158</th>
+    <th style="width:150">HMFZRSSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR freezing rain sensor status sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-159</th>
+    <th style="width:150">HMPCPSSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR precipitation occurrence/type sensor status sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-160</th>
+    <th style="width:150">HMTMDPSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR dewpoint temperature sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-161</th>
+    <th style="width:150">HMREHUSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR relative humidity sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-162</th>
+    <th style="width:150">HMSPHUSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR specific humidity sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-163</th>
+    <th style="width:150">HMALSESQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR altimeter sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-164</th>
+    <th style="width:150">HMWVMRSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR water vapor mixing ratio sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-165</th>
+    <th style="width:150">HMPRESSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR pressure sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-166</th>
+    <th style="width:150">HMTMDBSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR temperature sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-167</th>
+    <th style="width:150">HMTMVTSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR virtual temperature sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-168</th>
+    <th style="width:150">HMWDIRSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR wind direction sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-169</th>
+    <th style="width:150">HMWSPDSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR wind speed sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-170</th>
+    <th style="width:150">HMUDIRSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR u-wind sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-171</th>
+    <th style="width:150">HMVDIRSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR v-wind sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-172</th>
+    <th style="width:150">HMHOVISQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR horizontal visibility sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-173</th>
+    <th style="width:150">HMPCP1SQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR 1-hour precipitation sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-174</th>
+    <th style="width:150">HMREQVSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR rate of precipitation sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-175</th>
+    <th style="width:150">HMSKYBSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR sky cover base altitude sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-176</th>
+    <th style="width:150">HMGUSTSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR wind gust sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-177</th>
+    <th style="width:150">HMALRTSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR weather alert1 and alert2 sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-178</th>
+    <th style="width:150">HMOWEPSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR other weather phenomena sequence)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-50-179</th>
+    <th style="width:150">HMRWVRSQ</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR runway visual range sequence)</th>
   </tr>
  </thead>
  <tbody>
@@ -34283,6 +34570,42 @@ ter reports)</th>
     <th>3-55-030</th>
     <th style="width:150">NC255030</th>
     <th style="width:750; padding-left:25px;" class="left">(Mesonet data from MADIS– other providers not listed above)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-55-031</th>
+    <th style="width:150">NC255031</th>
+    <th style="width:750; padding-left:25px;" class="left">(Urbanet data from MADIS - miscellaneous)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-55-032</th>
+    <th style="width:150">NC255032</th>
+    <th style="width:750; padding-left:25px;" class="left">(Urbanet data from MADIS - University of South Alabama)</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-55-033</th>
+    <th style="width:150">NC255033</th>
+    <th style="width:750; padding-left:25px;" class="left">(HF-METAR data from MADIS - one-minute ASOS)</th>
   </tr>
  </thead>
  <tbody>
@@ -41464,6 +41787,42 @@ meter Sea Surface Height Anomaly (SSHA) high-resolution global reports (2)</th>
     <th>3-63-099</th>
     <th style="width:150">DEFAULT</th>
     <th style="width:750; padding-left:25px;" class="left">(PREPBUFR: Program code (099) for events generated in a non-defined step (default))</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-63-185</th>
+    <th style="width:150">NC005024</th>
+    <th style="width:750; padding-left:25px;" class="left">(India/INSAT IR (long-wave) satellite-derived winds (high-density) (decoded from BUFR format))</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-63-186</th>
+    <th style="width:150">NC005025</th>
+    <th style="width:750; padding-left:25px;" class="left">(India/INSAT visible satellite-derived winds (high-density) (decoded from BUFR format))</th>
+  </tr>
+ </thead>
+ <tbody>
+ </tbody>
+</table>
+<br />
+<table rules=groups>
+ <thead>
+  <tr class="local">
+    <th>3-63-187</th>
+    <th style="width:150">NC005026</th>
+    <th style="width:750; padding-left:25px;" class="left">(India/INSAT water vapor imager satellite-derived winds (high-density) (decoded from BUFR format))</th>
   </tr>
  </thead>
  <tbody>
