--- a/tables_project/outfiles/TableB_0_STDv29_LOC7.html
+++ b/tables_project/outfiles/TableB_0_STDv29_LOC7.html
@@ -10,9 +10,9 @@
   <h2>BASED ON BUFR MASTER TABLE 0 (WMO), VERSION 29 IMPLEMENTED ON November 08, 2017  </h2>
   <br />
   <h3>LINKS TO OTHER VERSION 29 TABLES:&nbsp;&nbsp;<a href="TableA_0_STDv29_LOC7.html">A</a>&nbsp;&nbsp;<a href="TableD_0_STDv29_LOC7.html">D</a>&nbsp;&nbsp;<a href="CodeFlag_0_STDv29_LOC7.html">CODE/FLAG</a></h3>
-  <h3>LINKS TO OTHER TABLE B VERSIONS:&nbsp;<a href="TableB_0_STDv13_LOC7.html">13</a>&nbsp;<a href="TableB_0_STDv14_LOC7.html">14</a>&nbsp;<a href="TableB_0_STDv15_LOC7.html">15</a>&nbsp;<a href="TableB_0_STDv16_LOC7.html">16</a>&nbsp;<a href="TableB_0_STDv17_LOC7.html">17</a>&nbsp;<a href="TableB_0_STDv18_LOC7.html">18</a>&nbsp;<a href="TableB_0_STDv19_LOC7.html">19</a>&nbsp;<a href="TableB_0_STDv20_LOC7.html">20</a>&nbsp;<a href="TableB_0_STDv21_LOC7.html">21</a>&nbsp;<a href="TableB_0_STDv22_LOC7.html">22</a>&nbsp;<a href="TableB_0_STDv23_LOC7.html">23</a>&nbsp;<a href="TableB_0_STDv24_LOC7.html">24</a>&nbsp;<a href="TableB_0_STDv25_LOC7.html">25</a>&nbsp;<a href="TableB_0_STDv26_LOC7.html">26</a>&nbsp;<a href="TableB_0_STDv27_LOC7.html">27</a>&nbsp;<a href="TableB_0_STDv28_LOC7.html">28</a>&nbsp;29</h3>
+  <h3>LINKS TO OTHER TABLE B VERSIONS:&nbsp;<a href="TableB_0_STDv13_LOC7.html">13</a>&nbsp;<a href="TableB_0_STDv14_LOC7.html">14</a>&nbsp;<a href="TableB_0_STDv15_LOC7.html">15</a>&nbsp;<a href="TableB_0_STDv16_LOC7.html">16</a>&nbsp;<a href="TableB_0_STDv17_LOC7.html">17</a>&nbsp;<a href="TableB_0_STDv18_LOC7.html">18</a>&nbsp;<a href="TableB_0_STDv19_LOC7.html">19</a>&nbsp;<a href="TableB_0_STDv20_LOC7.html">20</a>&nbsp;<a href="TableB_0_STDv21_LOC7.html">21</a>&nbsp;<a href="TableB_0_STDv22_LOC7.html">22</a>&nbsp;<a href="TableB_0_STDv23_LOC7.html">23</a>&nbsp;<a href="TableB_0_STDv24_LOC7.html">24</a>&nbsp;<a href="TableB_0_STDv25_LOC7.html">25</a>&nbsp;<a href="TableB_0_STDv26_LOC7.html">26</a>&nbsp;<a href="TableB_0_STDv27_LOC7.html">27</a>&nbsp;<a href="TableB_0_STDv28_LOC7.html">28</a>&nbsp;29&nbsp;<a href="TableB_0_STDv30_LOC7.html">30</a></h3>
 <br />
-  <h5>(This webpage was generated: 2018/03/01 10:40:33)</h5>
+  <h5>(This webpage was generated: 2018/07/13 15:16:49)</h5>
   <br />
   <hr />
 <h3>Classification of elements</h3>
@@ -18882,6 +18882,15 @@ CLASS 33 - Quality information</h3>
     <td class="right">0</td>
     <td class="right">13</td>
     <td>TOQF</td>
+  </tr>
+  <tr class="local">
+    <td>0-33-237</td>
+    <td>FSL "QC applied" flag for surface sensor status</td>
+    <td><a href="CodeFlag_0_STDv29_LOC7.html#033237">Code table</a></td>
+    <td class="right">0</td>
+    <td class="right">0</td>
+    <td class="right">5</td>
+    <td>QCSS</td>
   </tr>
   <tr class="local">
     <td>0-33-238</td>
