--- a/webtier/toc/toc_body.html
+++ b/webtier/toc/toc_body.html
@@ -35,6 +35,9 @@
             <li><a href="dfbfmstab/#tableb_samples">Sample Master Table B files</a></li>
             <li><a href="dfbfmstab/#tabled">Table D</a></li>
             <li><a href="dfbfmstab/#tabled_samples">Sample Master Table D files</a></li>
+            <li><a href="dfbfmstab/#codflg">CODFLG GETCFMNG</a></li>
+            <li><a href="dfbfmstab/#cftables">Code/Flag Tables</a></li>
+            <li><a href="dfbfmstab/#cftables_samples">Sample Master Code/Flag Table files</a></li>
          </ul>
       <p />
       <li><a href="other/">Other Useful BUFRLIB Subroutines:</a></li>
@@ -58,7 +61,9 @@
             <li><a href="other/#nemspecs">NEMSPECS</a></li>
             <li><a href="other/#getlens">GETLENS</a></li>
             <li><a href="other/#gettagpr">GETTAGPR</a></li>
+            <li><a href="other/#gettagre">GETTAGRE</a></li>
             <li><a href="other/#getvalnb">GETVALNB</a></li>
+            <li><a href="other/#setvalnb">SETVALNB</a></li>
             <li><a href="other/#cnved4">CNVED4</a></li>
             <li><a href="other/#maxout">MAXOUT</a></li>
             <li><a href="other/#bvers">BVERS</a></li>
