add Python documentation

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ $(document).ready(function(){initNavTree('index.html','');});
 <div class="contents">
 <div class="textblock"><p>This library contains subroutines, functions and other utilities that can be used to read (decode) and write (encode) data in BUFR, which is a <a href="https://public.wmo.int">WMO</a> standard format for the exchange of meteorological data.</p>
 <p>Please see the <a href="pages.html">Related Pages</a> tab for more details on this library, including a comprehensive user guide.</p>
+<p>The python API documentation is available <a href="python/index.html">here</a></p>
 <p>This library is part of the <a href="https://github.com/NOAA-EMC/NCEPLIBS">NCEPLIBS</a> project. </p>
 </div></div><!-- contents -->
 </div><!-- doc-content -->
