fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
 <div class="textblock"><h2><a class="anchor" id="autotoc_md63"></a>
 Documentation for Previous Versions of NCEPLIBS-bufr</h2>
 <ul>
-<li><a href="https://noaa-emc.github.io/NCEPLIBS-bufr/previous_versions/v12.0.l/index.html">NCEPLIBS-bufr-12.0.l</a></li>
+<li><a href="https://noaa-emc.github.io/NCEPLIBS-bufr/previous_versions/v12.0.1/index.html">NCEPLIBS-bufr-12.0.1</a></li>
 <li><a href="https://noaa-emc.github.io/NCEPLIBS-bufr/previous_versions/v12.0.0/index.html">NCEPLIBS-bufr-12.0.0</a></li>
 <li><a href="https://noaa-emc.github.io/NCEPLIBS-bufr/previous_versions/v11.7.1/index.html">NCEPLIBS-bufr-11.7.1</a></li>
 <li><a href="https://noaa-emc.github.io/NCEPLIBS-bufr/previous_versions/v11.7.0/index.html">NCEPLIBS-bufr-11.7.0</a></li>
